--- a/LabA/my_echo/makefile
+++ b/LabA/my_echo/makefile
@@ -7,4 +7,5 @@ my_echo.o: my_echo.c
 	gcc -g -Wall -m32 -c -o my_echo.o my_echo.c
 
 .PHONY: clean 
-	clean: rm -f *.o my_echo
+clean:
+	rm -f *.o my_echo
