--- a/Lab1/Task0/makefile
+++ b/Lab1/Task0/makefile
@@ -4,7 +4,7 @@ cw: count_words.o
 	gcc -g -Wall -m32 -o cw count_words.o
 
 count_words.o: count-words.c 
-	gcc -g -Wall -m32 -o count_words.o count-words.c
+	gcc -c -g -Wall -m32 -o count_words.o count-words.c
 
 .PHONY: clean 
 clean:
