finished task2 (encoder)

--- a/LabA/task2/makefile
+++ b/LabA/task2/makefile
@@ -1,7 +1,7 @@
-all:encoder 
+all: encoder 
 
 encoder:encoder.o
-	gcc -m32 -g -Wall -o encoder encoder.o
+	gcc -g -Wall -m32 -o encoder encoder.o
 
 encoder.o:encoder.c 
 	gcc -g -Wall -m32 -c -o encoder.o encoder.c
