fixed empty input problem

--- a/LabC/makefile
+++ b/LabC/makefile
@@ -1,19 +1,19 @@
 all: myshell looper mypipe
 
 myshell: myshell.o LineParser.o
-	gcc -g  -Wall -o myshell myshell.o LineParser.o
+	gcc -g -m32 -Wall -o myshell myshell.o LineParser.o
 
 myshell.o: myshell.c
-	gcc  -Wall -c myshell.c -o myshell.o
+	gcc -m32 -Wall -c myshell.c -o myshell.o
 
 LineParser.o: LineParser.c
-	gcc  -Wall -c LineParser.c -o LineParser.o
+	gcc -m32 -Wall -c LineParser.c -o LineParser.o
 
 mypipe: mypipe.c
-	gcc  -Wall mypipe.c -o mypipe
+	gcc -m32 -Wall mypipe.c -o mypipe
 
 looper: looper.c
-	gcc  -Wall looper.c -o looper
+	gcc -m32 -Wall looper.c -o looper
 	
 .PHONY: clean
 clean:
