--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "lineparser.h": "c",
-        "errno.h": "c"
+        "errno.h": "c",
+        "fcntl.h": "c"
     }
 }
