--- a/Lab3/part1/makefile
+++ b/Lab3/part1/makefile
@@ -1,10 +1,10 @@
-all: encoder
+all: task1b
 
-encoder: encoder.o util.o
-	gcc -g -Wall -m32 -o encoder encoder.o util.o
+task1b: task1b.o util.o
+	gcc -g -Wall -m32 -o task1b task1b.o util.o
 
-encoder.o:encoder.s 
-	nasm -g -f elf32 encoder.s -o encoder.o
+task1b.o:task1b.s 
+	nasm -g -f elf32 task1b.s -o task1b.o
 
 util.o:util.c 
 	gcc -m32 -g -Wall -ansi -c -nostdlib -fno-stack-protector util.c -o util.o
@@ -12,4 +12,4 @@ util.o:util.c
 .PHONY: clean 
 
 clean: 
-	rm -f *.o encoder util
+	rm -f *.o task1b util
